# overleaf-gitbridge-ro

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: admin.rs  auth.rs  config.rs  error.rs  git_http.rs  main.rs  repo.rs
templates/: admin_dashboard.html
