[package]
name = "sharelatex-gitbridge-ro"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["http1", "form"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.22"
url = "2"
walkdir = "2"
tempfile = "3"
dashmap = "6.1.0"
chrono = { version = "0.4", features = ["clock", "std", "serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0.17"
sha2 = "0.10"
hex = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[bin]]
name = "sharelatex-gitbridge-ro"
path = "src/main.rs"
